# PiiXeL-Engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_and_run.sh  flake.nix  format-code.bat  format-code.sh  rebuild_uuid_cache.cpp
cmake/: AddWindowsIcon.cmake  (+1 more)
engine/: .clangd  CMakeLists.txt
engine/include/Animation/: AnimationClip.hpp  AnimationSerializer.hpp  AnimatorAPI.hpp  AnimatorController.hpp  AnimatorHandle.hpp  SpriteSheet.hpp
engine/include/Components/: Animator.hpp  AudioListener.hpp  AudioSource.hpp  BoxCollider2D.hpp  Camera.hpp  CircleCollider2D.hpp  ComponentModule.hpp  ComponentModuleMacros.hpp  ComponentModuleRegistry.hpp  RigidBody2D.hpp  Script.hpp  Sprite.hpp  Tag.hpp  Transform.hpp  UUID.hpp
engine/include/Core/: Application.hpp  Engine.hpp  Logger.hpp  SplashScreen.hpp
engine/include/Debug/: DebugDraw.hpp  Profiler.hpp
engine/include/Editor/: AnimationClipEditorPanel.hpp  AnimatorControllerEditorPanel.hpp  AssetBrowserPanel.hpp  AssetInspectorPanel.hpp  BuildPanel.hpp  BuildSystem.hpp  Command.hpp  CommandHistory.hpp  ConsoleLogger.hpp  EditorAnimatorPreviewSystem.hpp  EditorCamera.hpp  EditorCommandSystem.hpp  EditorCommands.hpp  EditorGizmoSystem.hpp  EditorLayer.hpp  EditorPanelManager.hpp  EditorSceneManager.hpp  EditorSelectionManager.hpp  EditorShortcutHandler.hpp  EditorStateManager.hpp  EditorThemeManager.hpp  SpriteSheetEditorPanel.hpp
engine/include/Editor/Panels/: ConsolePanel.hpp  ContentBrowserPanel.hpp  EditorPanel.hpp  GameViewportPanel.hpp  HierarchyPanel.hpp  InspectorPanel.hpp  MenuBarPanel.hpp  ProfilerPanel.hpp  ProjectSettingsPanel.hpp  SceneViewportPanel.hpp  ToolbarPanel.hpp
engine/include/Editor/Utilities/: EditorAssetPickerUtility.hpp
engine/include/Physics/: ComponentHandles.hpp  Physics2D.hpp  RigidBodyHandle.hpp
engine/include/Project/: ProjectSettings.hpp
engine/include/Reflection/: ImGuiRenderer.hpp  JsonSerializer.hpp  Reflection.hpp  ReflectionInit.hpp  ReflectionMacros.hpp  TypeInfo.hpp  TypeRegistry.hpp
engine/include/Resources/: Asset.hpp  AssetImporter.hpp  AssetManager.hpp  AssetPackage.hpp  AssetRegistry.hpp  AudioAsset.hpp  EmbeddedAssetLoader.hpp  PathManager.hpp  TextureAsset.hpp
engine/include/Scene/: ComponentRegistry.hpp  EntityFactory.hpp  EntityRegistry.hpp  Scene.hpp  SceneSerializer.hpp
engine/include/Scripting/: AssetRef.hpp  AudioSourceHandle.hpp  ComponentRef.hpp  EntityRef.hpp  Event.hpp  ScriptComponent.hpp  ScriptComponent.inl  ScriptComponentHandles.inl  ScriptRegistry.hpp
engine/include/Systems/: AnimationSystem.hpp  AudioSystem.hpp  PhysicsSystem.hpp  RenderSystem.hpp  ScriptSystem.hpp
engine/src/Animation/: AnimationClip.cpp  AnimationSerializer.cpp  AnimatorAPI.cpp  AnimatorController.cpp  AnimatorHandle.cpp  SpriteSheet.cpp
engine/src/Components/: Animator.cpp  AudioListener.cpp  AudioSource.cpp  BoxCollider2D.cpp  Camera.cpp  CircleCollider2D.cpp  ComponentModuleRegistry.cpp  RigidBody2D.cpp  Script.cpp  Sprite.cpp  Tag.cpp  Transform.cpp  UUID.cpp
engine/src/Core/: Application.cpp  Engine.cpp  Logger.cpp  SplashScreen.cpp
engine/src/Debug/: DebugDraw.cpp  Profiler.cpp
engine/src/Editor/: AnimationClipEditorPanel.cpp  AnimatorControllerEditorPanel.cpp  AssetBrowserPanel.cpp  AssetInspectorPanel.cpp  BuildPanel.cpp  BuildSystem.cpp  CommandHistory.cpp  ConsoleLogger.cpp  EditorAnimatorPreviewSystem.cpp  EditorCamera.cpp  EditorCommandSystem.cpp  EditorGizmoSystem.cpp  EditorLayer.cpp  EditorPanelManager.cpp  EditorSceneManager.cpp  EditorSelectionManager.cpp  EditorShortcutHandler.cpp  EditorStateManager.cpp  EditorThemeManager.cpp  SpriteSheetEditorPanel.cpp  editor_main.cpp
engine/src/Editor/Panels/: ConsolePanel.cpp  ContentBrowserPanel.cpp  GameViewportPanel.cpp  HierarchyPanel.cpp  InspectorPanel.cpp  MenuBarPanel.cpp  ProfilerPanel.cpp  ProjectSettingsPanel.cpp  SceneViewportPanel.cpp  ToolbarPanel.cpp
engine/src/Editor/Utilities/: EditorAssetPickerUtility.cpp
engine/src/Physics/: Physics2D.cpp  RigidBodyHandle.cpp
engine/src/Project/: ProjectSettings.cpp
engine/src/Reflection/: ImGuiRenderer.cpp  JsonSerializer.cpp  ReflectionInit.cpp  TypeInfo.cpp  TypeRegistry.cpp
engine/src/Resources/: Asset.cpp  AssetImporter.cpp  AssetManager.cpp  AssetPackage.cpp  AssetRegistry.cpp  AudioAsset.cpp  EmbeddedAssetLoader.cpp  PathManager.cpp  TextureAsset.cpp
engine/src/Scene/: ComponentRegistration.cpp  EntityFactory.cpp  EntityRegistry.cpp  Scene.cpp  SceneSerializer.cpp
engine/src/Scripting/: AssetRef.cpp  AudioSourceHandle.cpp  ComponentRef.cpp  EntityRef.cpp  ScriptComponent.cpp  ScriptRegistry.cpp
engine/src/Systems/: AnimationSystem.cpp  AudioSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp
games/MyFirstGame/: .clangd  CMakeLists.txt  game.config.json  imgui.ini
games/MyFirstGame/content/: NewSpriteSheet.pxa
games/MyFirstGame/content/assets/: NewAnimationClip.animclip  NewAnimationClip.pxa  NewAnimatorController.animcontroller  NewAnimatorController.pxa  NewSpriteSheet.pxa  NewSpriteSheet.spritesheet  aaa.spritesheet  dirt.pxa  grass_side.pxa  grass_side1.pxa  npc1.pxa  test.animcontroller  test.pxa  vvv.spritesheet
games/MyFirstGame/content/assets/player/: PlayerAnimationController.animcontroller  PlayerAnimationController.pxa  idle.pxa  idle_clip.animclip  idle_clip.pxa  idle_sheet.pxa  idle_sheet.spritesheet  idle_sprite.pxa  jump.pxa  jump_clip.animclip  jump_clip.pxa  jump_sheet.pxa  jump_sheet.spritesheet  jump_sprite.pxa  walk.pxa  walk_clip.animclip  walk_clip.pxa  walk_sheet.pxa  walk_sheet.spritesheet  walk_sprite.pxa
games/MyFirstGame/content/assets/sounds/: music_sting_short_groovy_flute_01.pxa
games/MyFirstGame/content/scenes/: Default_Scene.scene  New_Scene.scene  Yqooo.scene
games/MyFirstGame/datas/: .asset_uuid_cache  game.package
games/MyFirstGame/datas/cache/content/assets/: dirt.pxa
games/MyFirstGame/include/: ExampleScripts.hpp
games/MyFirstGame/src/: GameScripts.cpp  editor_main.cpp  editor_main.cpp.old  game_main.cpp
(+9 files in other folders)
